Add approve page

--- a/TWHelp/Areas/Forum/Pages/UploadVideo.cshtml
+++ b/TWHelp/Areas/Forum/Pages/UploadVideo.cshtml
@@ -7,8 +7,18 @@
     <link href="~/lib/dropzone/dropzone.css" rel="stylesheet" />
 }
 
+<style>
+    .page-background-image {
+        background-image: url('../images/video-background.svg'); 
+        background-repeat: no-repeat; 
+        background-size: 50% 100%; 
+        background-position: right;
+        background-attachment: fixed;
+    }
+</style>
+
 <div class="container-fluid">
-    <div class="row">
+    <div class="row page-background-image">
         <div class="col-11 col-sm-10 col-md-9 col-lg-7 mx-auto">
             <div class="my-5" style="">
                 <div class="text-center">
