--- a/TWHelp/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/TWHelp/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -2,38 +2,43 @@
     Layout = "/Views/Shared/_Layout.cshtml";
 }
 
-<div class="my-2">
-    <h1>Manage your account</h1>
-</div>
+<div class="container">
+    <div class="">
+        <div class="my-2">
+            <h1>Manage your account</h1>
+        </div>
 
-<div>
-    <div class="d-flex flex-column flex-sm-row justify-content-between">
-        <h4>Change your account settings</h4>
-        @if (string.Equals(ViewData["IsPsychologist"] as string, "True"))
-        {
-            @if (string.Equals(ViewData["IsAccountActivated"] as string, "True"))
-            {
-                <div class="my-3 my-sm-0">
-                    <p class="my-0 font-weight-bold">Your psychologist status is:  <span class="badge badge-success">approved</span></p>
+        <div>
+            <div class="d-flex flex-column flex-sm-row justify-content-between">
+                <h4>Change your account settings</h4>
+                @if (string.Equals(ViewData["IsPsychologist"] as string, "True"))
+                {
+                    @if (string.Equals(ViewData["IsAccountActivated"] as string, "True"))
+                    {
+                        <div class="my-3 my-sm-0">
+                            <p class="my-0 font-weight-bold">Your psychologist status is:  <span class="badge badge-success">approved</span></p>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="my-3 my-sm-0">
+                            <p class="my-0 font-weight-bold">Your psychologist status is:  <span class="badge badge-warning">unapproved</span></p>
+                            <p>Approve it <a asp-page="Approve">here</a> rigth now</p>
+                        </div>
+                    }
+                }
+            </div>
+            <hr />
+            <div class="row">
+                <div class="col-md-3">
+                    <partial name="_ManageNav" />
                 </div>
-            }
-            else
-            {
-                <div class="my-3 my-sm-0">
-                    <p class="my-0 font-weight-bold">Your psychologist status is:  <span class="badge badge-warning">unapproved</span></p>
-                    <p>approve it <a href="#">here</a> rigth now</p>
+                <div class="col-md-9">
+                    @RenderBody()
                 </div>
-            }
-        }
-    </div>
-    <hr />
-    <div class="row">
-        <div class="col-md-3">
-            <partial name="_ManageNav" />
+            </div>
         </div>
-        <div class="col-md-9">
-            @RenderBody()
-        </div>
+
     </div>
 </div>
 
