--- a/TWHelp/Views/Shared/_Layout.cshtml
+++ b/TWHelp/Views/Shared/_Layout.cshtml
@@ -68,6 +68,7 @@
                                         <a class="dropdown-item nav-link text-dark" asp-area="Forum" asp-page="/CreateTopic">Ask question</a>
                                         <a class="dropdown-item nav-link text-dark" asp-area="Forum" asp-page="/VideoFeed">Video feed</a>
                                         <a class="dropdown-item nav-link text-dark" asp-area="Forum" asp-page="/UploadVideo">Upload video</a>
+                                        <a class="dropdown-item nav-link text-dark" asp-area="Forum" asp-page="/PsychoTests">Psychological tests</a>
                                     </div>
                                 </div>
                             </li>
