--- a/TWHelp/Areas/Profiles/Pages/Users/Index.cshtml
+++ b/TWHelp/Areas/Profiles/Pages/Users/Index.cshtml
@@ -3,34 +3,52 @@
 @{
 }
 
-<div class="col-12 col-sm-11 col-md-10 mx-auto">
-    <p class="font-weight-bold text-center">List of users</p>
-    <div class="d-flex flex-column" id="psycho-container">
-        @* add here content from js *@
-    </div>
-</div>
-@foreach (var user in Model.Users)
-{
-    var base64 = Convert.ToBase64String(user.AvatarImage);
-    var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
-    <div id="psycho-div" class="m-2 p-2" style="background-color: #fafafa">
-        <div class="d-flex flex-column flex-md-row ">
-            <div>
-                <div>
+<style>
+    .page-background-image {
+        background-image: url('../images/users-background.svg');
+        background-repeat: no-repeat;
+        background-size: 50% 100%;
+        background-position: right;
+        background-attachment: fixed;
+    }
+</style>
 
-                    <img id="psycho-image" src='@imgSrc ' alt="profile-image" class="m-3 rounded-circle" style="border: 1px solid black;" width="200" height="200">
+<div class="container-fluid">
+    <div class="row page-background-image">
+        <div class="col-12 col-sm-11 col-md-10 col-lg-9 mx-auto">
+            <div class="my-5 py-5">
+                <div class="text-center">
+                    <h4>All TWHelp users</h4>
                 </div>
-            </div>
-            <div class="d-flex flex-column flex-md-row flex-md-wrap flex-lg-nowrap">
-                <div class="m-3">
-                    <p>Name: @user.Nickname</p>
-                    <p>Email: @user.Email</p>
-                    <p>Age: @user.Age</p>
-                    <p>About: @user.About</p>
-                </div>
-                <div class="m-3">
+                <div class="p-2" style="background-color: rgba(242, 242, 242, 0.6);">
+                    @foreach (var user in Model.Users)
+                    {
+                        var base64 = Convert.ToBase64String(user.AvatarImage);
+                        var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                        <div id="psycho-div" class="m-2 p-2" style="background-color: rgba(255, 255, 255, 0.6);">
+                            <div class="d-flex flex-column flex-md-row ">
+                                <div>
+                                    <div>
+
+                                        <img id="psycho-image" src='@imgSrc ' alt="profile-image" class="m-3 rounded-circle" style="border: 1px solid black;" width="200" height="200">
+                                    </div>
+                                </div>
+                                <div class="d-flex flex-column flex-md-row flex-md-wrap flex-lg-nowrap">
+                                    <div class="m-3">
+                                        <p>Name: @user.Nickname</p>
+                                        <p>Email: @user.Email</p>
+                                        <p>Age: @user.Age</p>
+                                        <p>About: @user.About</p>
+                                    </div>
+                                    <div class="m-3">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    }
                 </div>
             </div>
         </div>
     </div>
-}
+</div>
+
