--- a/TWHelp/Views/Shared/_Layout.cshtml
+++ b/TWHelp/Views/Shared/_Layout.cshtml
@@ -75,8 +75,20 @@
                         }
                         @if (User.IsInRole("admin"))
                         {
+                            <li>
+                                <div class="dropdown show">
+                                    <a class="btn dropdown-toggle" style="padding: 8px 12px;" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Admin page
+                                    </a>
+
+                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                        <a class="nav-link text-dark" asp-area="Profiles" asp-page="/Admin/Roles">Roles</a>
+                                        <a class="nav-link text-dark" asp-area="Profiles" asp-page="/Admin/ApproveRequests">Psychologist request</a>
+                                    </div>
+                                </div>
+                            </li>
+
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="Roles" asp-page="/Index">Roles</a>
                             </li>
                         }
                     </ul>
