Update psycho page UI

--- a/TWHelp/Areas/Profiles/Pages/Psychologists/Index.cshtml
+++ b/TWHelp/Areas/Profiles/Pages/Psychologists/Index.cshtml
@@ -3,9 +3,9 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12 col-sm-11 col-md-10 mx-auto" style="background-color: lightcyan">
-            <div class="my-3 py-3">
-                <div style="background-color: lightblue">
+        <div class="col-12 col-sm-11 col-md-10 col-lg-8 mx-auto">
+            <div class="my-5 py-5">
+                <div>
                     <div class="text-center">
                         <h2>Psychologists page</h2>
                     </div>
@@ -27,8 +27,38 @@
 
                 <div class="my-3 p-2">
                     <p class="font-weight-bold text-center">List of psychologists</p>
-                    <div class="d-flex flex-column" id="psycho-container">
+                    <div class="d-flex flex-column p-1 my-3" id="psycho-container" style="background-color: #f2f2f2">
                         @* add here content from js *@
+
+
+                        <div id="psycho-div" class="m-2 p-2" style="background-color: white">
+                            <div class="m-2 d-flex justify-content-between">
+                                <h5>tets@gmail.com</h5>
+                                <span class="badge badge-success p-2">Confirmed status</span>
+                            </div>
+
+                            <div class="d-flex">
+                                <div>
+                                    <img id="psycho-image" class="rounded-circle m-2" src="~/images//profile-preview/psychologist-profile-10.svg" width="150" height="150">
+                                </div>
+                                <div>
+                                    <p class="m-0">Degree: <span id="psycho-degree"></span></p>
+                                    <p class="m-0">Area of experetise: <span id="psycho-expertise-area"></span></p>
+                                    <p class="m-0">Psycho work experience: <span id="psycho-experience"></span></p>
+                                </div>
+                            </div>
+
+                            <div>
+                                <p>Is <span>26</span> years old</p>
+                            </div>
+
+                            <div>
+                                <p class="mb-0">
+                                    <i id="psycho-like-like" class="far fa-heart" style="color: red; font-size: 26px;"></i> <span id="psycho-likes">29</span> likes
+                                </p>
+                            </div>
+                        </div>
+
                     </div>
                     <div>
                         <nav aria-label="Page navigation example">
@@ -49,7 +79,7 @@
 
 </div>
 
-<template id="template">
+<template id="template__">
     <div id="psycho-div" class="m-2 p-2" style="background-color: #fafafa">
         <div class="d-flex flex-column flex-md-row ">
             <div>
@@ -87,6 +117,39 @@
             <div id="psycho-like">
                 <i id="psycho-like-like" class="far fa-heart" style="color: red; font-size: 20px;"></i>
             </div>
+        </div>
+    </div>
+</template>
+
+<template id="template">
+    <div id="psycho-div" class="m-2 p-2" style="background-color: white">
+        <div class="m-2 d-flex justify-content-between">
+            <h5 id="psycho-name">tets@gmail.com</h5>
+            
+           <div id="psycho-status">
+                <span class="badge badge-success p-2">Confirmed status</span>
+            </div>
+        </div>
+
+        <div class="d-flex">
+            <div>
+                <img id="psycho-image" class="rounded-circle m-2" src="~/images//profile-preview/psychologist-profile-10.svg" width="150" height="150">
+            </div>
+            <div>
+                <p class="m-0">Degree: <span id="psycho-degree"></span></p>
+                <p class="m-0">Area of experetise: <span id="psycho-expertise-area"></span></p>
+                <p class="m-0">Psycho work experience: <span id="psycho-experience"></span></p>
+            </div>
+        </div>
+
+        <div>
+            <p>Is <span id="psycho-age">26</span> years old</p>
+        </div>
+
+        <div>
+            <p class="mb-0">
+                <i id="psycho-like-like" class="far fa-heart" style="color: red; font-size: 26px;"></i> <span id="psycho-likes">29</span> likes
+            </p>
         </div>
     </div>
 </template>
@@ -243,6 +306,11 @@
         })
     }
 
+    function getRandomInt(max) {
+      return Math.floor(Math.random() * Math.floor(max)) + 1;
+    }
+
+
     function _displayItems(data) {
         const container = document.getElementById('psycho-container');
         container.innerHTML = '';
@@ -251,7 +319,8 @@
             let newDiv = document.importNode(template.content, true);
 
             newDiv.getElementById('psycho-name').textContent = item.nickName;
-            newDiv.getElementById('psycho-image').src = item.avatarImage == null ? "/images/user-profile.png" : "data:image/png;base64," + item.avatarImage;
+            newDiv.getElementById('psycho-image').src = '../images/profile-preview/psychologist-profile-' + getRandomInt(9) + ".svg";
+            //newDiv.getElementById('psycho-image').src = item.avatarImage == null ?  '../images/profile-preview/profile-preview-' + getRandomInt(9) + ".svg" : "data:image/png;base64," + item.avatarImage;
             newDiv.getElementById('psycho-age').textContent = item.age;
             newDiv.getElementById('psycho-degree').textContent = item.education;
             newDiv.getElementById('psycho-expertise-area').textContent = item.areaOfExpertise;
@@ -259,10 +328,10 @@
             newDiv.getElementById('psycho-likes').textContent = item.likes;
 
             if (item.isAccountActivated == 'true') {
-                newDiv.getElementById('psycho-confirm').textContent = 'yes';
+                newDiv.getElementById('psycho-status').innerHTML = '<span class="badge badge-success p-2">Confirmed status</span>';
             }
             else {
-                newDiv.getElementById('psycho-confirm').textContent = 'no';
+                newDiv.getElementById('psycho-status').innerHTML = '<span class="badge badge-warning p-2">Status not confirmed</span>';
             }
 
             if (item.isCurrentUserSetLike) {
