--- a/TWHelp/Areas/Home/Pages/Index.cshtml
+++ b/TWHelp/Areas/Home/Pages/Index.cshtml
@@ -35,7 +35,7 @@
 
             <div class="my-5 py-5">
                 <div>
-                    <button class="btn btn-warning">Get started</button>
+                    <a class="btn btn-warning" asp-area="Analytics" asp-page="/Index">Get started</a>
                 </div>
             </div>
         </div>
